# vflexctl

./: LICENSE.txt  pyproject.toml  readme.md  readme.rst
src/vflexctl/: cli.py  exceptions.py  main.py  types.py
src/vflexctl/command/: hardware_info.py  led.py  voltage.py
src/vflexctl/device_interface/: __init__.py  command_preparation.py  common_commands.py  common_sequences.py  vflex.py
src/vflexctl/input_handler/: voltage_convert.py
src/vflexctl/midi_transport/: receivers.py  response_handling.py  senders.py
src/vflexctl/protocol/: __init__.py  command_framing.py  decoders.py  protocol.py
src/vflexctl/protocol/coders/: __init__.py  hardware_info.py  led_state.py  serial_number.py  voltage.py
test/input_handler/: test_voltage_convert.py
test/unit/: test_cli.py
test/unit/device_interface/: test_vflex.py
test/unit/input_handler/: test_voltage_convert.py
test/unit/midi_transport/: test_midi_receivers.py  test_midi_senders.py
test/unit/protocol/: test_command_framing.py  test_protocol.py
test/unit/protocol/coders/: test_led_state_coders.py  test_serial_number_coders.py  test_voltage_coders.py
