[project]
name = "vflexctl"
version = "0.1.0"
description = "Command line tool to set the output voltage for VFLEX devices"
authors = [
    {name = "hameedm",email = "hameedm@protonmail.com"}
]
readme = "readme.rst"
requires-python = "^3.12"
dependencies = [
    "python-rtmidi (>=1.5.8,<2.0.0)",
    "mido (>=1.3.3,<2.0.0)",
    "typer (>=0.20.0,<0.21.0)",
    "rich (>=14.2.0,<15.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "structlog (>=25.5.0,<26.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "mypy (>=1.19.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
